--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
-
-
 <!DOCTYPE html>
+
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
   <title>task</title>
-  <script src = "script.js"></script>
+  <script src="script.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -15,23 +14,29 @@
   <header class="header">
   </header>
 
-  
-
   <div class="login-page">
     <h2>Create an account</h2>
     <div class="form">
-<form class="register-form" action="" method="post" name= "register"  id="form" onsubmit = "valid(this)">
-        <input type="text" name="name" placeholder="username" id="name" size=12>  <br /><br />      
-        <input type="password" name="password" placeholder="password" id="password" size=12>  <br /><br />
-        <input type="password" name="rePassword" placeholder="confirm password" id="rePassword" size=12>  <br /><br />
-        <input type="email" name="email" placeholder="email" id="email" size=12>  <br /><br />
+      <form class="register-form" action="" method="post" name="register" id="form" onsubmit="valid(this)">
+        <input type="text" name="name" placeholder="username" id="name" size=12>
+        <br />
+        <br />
+        <input type="password" name="password" placeholder="password" id="password" size=12>
+        <br />
+        <br />
+        <input type="password" name="rePassword" placeholder="confirm password" id="rePassword" size=12>
+        <br />
+        <br />
+        <input type="email" name="email" placeholder="email" id="email" size=12>
+        <br />
+        <br />
         <button type="submit" onclick="sendJSON()">Register now!</button>
-</form>
-  </div>
+      </form>
+    </div>
   </div>
 
-    <footer class="footer">
-    </footer>
+  <footer class="footer">
+  </footer>
 </body>
 
 </html>
